--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "colors": "^1.4.0",
     "inquirer": "^9.1.5"
   }
